edit migration, config and route

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ MYSQL_DBNAME=""
 MYSQL_PROTOCOL="tcp"
 MYSQL_HOST="127.0.0.1"
 MYSQL_PORT="3306"
+
+MYSQL_USER_TEST=""
+MYSQL_PASSWORD_TEST=""
+MYSQL_DBNAME_TEST=""
+MYSQL_PROTOCOL_TEST="tcp"
+MYSQL_HOST_TEST="127.0.0.1"
+MYSQL_PORT_TEST="3306"
